Interact Re-Dev
Redéveloppement ou plutot déplacement du code concernant les interaction
en RolePlay (Ce qui détecte si un joueur peut build ou pas).

Le code dans interactListener a été ""déplaçé"" dans RPInteractListener
avec certaines parties redéveloppés.
interactListener apelle maintenant RPInteractListener pour savoir si le
joueur peut construire
- quand il fais une Action.PHYSICAL (marcher sur du soil par exemple)
- quand il interagit pour casser un bloc (Clic gauche)
- quand il intéragit pour poser ou intéragire avec un bloc (Clic droit)
- quand il place un bloc (BlockPlaceEvent)

Il y a aussi eu quelques petites choses de changé que je ne
mentionnerais pas.

--- a/.classpath
+++ b/.classpath
@@ -2,11 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/clement/Minecraft/Developement.plugin/diffusion.jar"/>
-	<classpathentry kind="lib" path="/home/clement/Minecraft/Developement.plugin/Dynmap-3.0-beta-4-spigot.jar"/>
-	<classpathentry kind="lib" path="/home/clement/Minecraft/Developement.plugin/MySkin.jar"/>
-	<classpathentry kind="lib" path="/home/clement/Minecraft/Developement.plugin/Paper-1.14.3.jar"/>
-	<classpathentry kind="lib" path="/home/clement/Minecraft/Developement.plugin/Vault.jar"/>
-	<classpathentry kind="lib" path="/home/clement/Minecraft/Developement.plugin/worldedit-bukkit-7.0.0.jar"/>
+	<classpathentry kind="lib" path="/home/clement/Développement/JavaPlugins/Libs/Dynmap-3.0-beta-4-spigot.jar"/>
+	<classpathentry kind="lib" path="/home/clement/Développement/JavaPlugins/Libs/MySkin.jar"/>
+	<classpathentry kind="lib" path="/home/clement/Développement/JavaPlugins/Libs/Paper-1.14.3.jar"/>
+	<classpathentry kind="lib" path="/home/clement/Développement/JavaPlugins/Libs/Vault.jar"/>
+	<classpathentry kind="lib" path="/home/clement/Développement/JavaPlugins/Libs/worldedit-bukkit-7.0.0.jar"/>
+	<classpathentry kind="lib" path="/home/clement/Développement/JavaPlugins/diffusion.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
